fix: disable button if symptoms is not check on mobile, refer to patientFormSymptoms.js fix: reload page if press on back button on step 2, refer to symptomChecker.js fix: animation slidein when clicking on certain parts of figure (mobile)

--- a/client/src/css/responsive.css
+++ b/client/src/css/responsive.css
@@ -36,8 +36,8 @@
     width: 100%;
     top: 58px;
     height: calc(100% - 58px);
-    background-color: rgb(255, 255, 255);
-    border-top: 1px solid rgb(217, 217, 214);
+    background-color: #ffffff;
+    border-top: 1px solid #d9d9d6;
     position: fixed;
     right: -100%;
     transition: 0.3s cubic-bezier(0, 0, 0.2, 1);
